--- a/index.html
+++ b/index.html
@@ -14,39 +14,102 @@ author_profile: true
   </p>
 </section>
 
-<!-- ABOUT ME -->
-<section style="padding: 3em 2em; background: #ffffff;">
-  <h2>About Me</h2>
-  <p>
-    I’m <strong>Bhupender</strong>, a graduate in Data Science and Business Analytics from the University of Warsaw, with a foundation in Computer Science and Engineering.
-    I specialize in applying data-driven techniques to solve real-world business problems using tools like Python, Power BI, and machine learning.
-  </p>
-  <p>
-    I'm based in Warsaw, Poland and currently focusing on advanced data science, automation, and scalable data pipelines.
-  </p>
-</section>
-
 <!-- PROJECTS -->
 <section id="projects" style="padding: 3em 2em; background: #fdf7f0;">
   <h2>Featured Projects</h2>
   <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 20px;">
 
-    <!-- Project 1 -->
-    <div style="flex: 1 1 300px; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
-      <h3>E-Commerce Predictive Analysis</h3>
-      <p>Forecasted customer purchase behavior using machine learning, customer segmentation, and sales trends.</p>
-      <p><strong>Tools:</strong> Python, Pandas, Scikit-learn, Power BI</p>
+    <!-- Project: Unsupervised-ML -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>Unsupervised ML</h3>
+      <p>A collection of unsupervised ML projects in Python including clustering, PCA, and topic modeling.</p>
+      <p><strong>Tools:</strong> Python, Scikit-learn, NLP</p>
+      <a href="https://github.com/Bhupender-Bhupender/Unsupervised-ML" target="_blank">View on GitHub</a>
     </div>
 
-    <!-- Project 2 -->
-    <div style="flex: 1 1 300px; background: #ffffff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <!-- Project: R Shiny MariaDB Student App -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>R Shiny + MariaDB App</h3>
+      <p>Student management app built with R Shiny + MariaDB for live data interaction, filtering, and dashboarding.</p>
+      <p><strong>Tools:</strong> R Shiny, SQL, Dashboard</p>
+      <a href="https://github.com/Bhupender-Bhupender/R-Shiny-MariaDB-Student-App" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project: Student Management System -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>Student Management System</h3>
+      <p>Java-based student data system with file I/O, GUI, and CRUD functionality.</p>
+      <p><strong>Tools:</strong> Java, Swing</p>
+      <a href="https://github.com/Bhupender-Bhupender/Student-Management-System" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project: Web Scraping -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>Web Scraping</h3>
+      <p>Python-based scripts that scrape GitHub repos, URLs, and article descriptions using requests and BeautifulSoup.</p>
+      <p><strong>Tools:</strong> Python, BeautifulSoup</p>
+      <a href="https://github.com/Bhupender-Bhupender/Web-Scraping" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project: Social Networks and Spatial ML -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
       <h3>Social Networks & Spatial ML</h3>
-      <p>Analyzed startup innovation spread using spatial analysis, network centrality, and geographic mapping.</p>
+      <p>Mapped shared investor networks across tech hubs using Crunchbase and spatial ML.</p>
       <p><strong>Tools:</strong> Python, GeoPandas, NetworkX</p>
+      <a href="https://github.com/Bhupender-Bhupender/Social-Networks-and-Spatial-ML" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project: Vampire Diaries Report -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>Vampire Diaries Report</h3>
+      <p>Data analysis of the Vampire Diaries TV series — ownership trends, fan activity, and popularity mapping.</p>
+      <p><strong>Tools:</strong> Python, NLP, Visualization</p>
+      <a href="https://github.com/Bhupender-Bhupender/vampire-diaries-report" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project: Stroke Risk Classification -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>Stroke Risk Classification</h3>
+      <p>Classification using models like logistic regression and XGBoost to predict risk.</p>
+      <p><strong>Tools:</strong> Python, Sklearn, XGBoost</p>
+      <a href="https://github.com/Bhupender-Bhupender/Stroke-risk-classification" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project: Seoul Bike Regression -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>Seoul Bike Regression</h3>
+      <p>Regression model built to forecast bike rentals using weather and temporal data.</p>
+      <p><strong>Tools:</strong> Python, Linear & Ridge Regression</p>
+      <a href="https://github.com/Bhupender-Bhupender/Seoul-bike-regression-model" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project: E-Commerce Predictive Analysis -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>E-Commerce Predictive Analysis</h3>
+      <p>Predictive modeling and customer behavior analysis for an online shopping portal.</p>
+      <p><strong>Tools:</strong> Python, Pandas, Power BI</p>
+      <a href="https://github.com/Bhupender-Bhupender/Predictive-Analysis-Ecommerce" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project: Reproducible Research Assignments -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>Reproducible Research Assignments</h3>
+      <p>Course assignments involving markdown documentation and R visual reports.</p>
+      <p><strong>Tools:</strong> R Markdown, ggplot2</p>
+      <a href="https://github.com/Bhupender-Bhupender/Reproducible-Research-Assignments" target="_blank">View on GitHub</a>
+    </div>
+
+    <!-- Project: Reproducible Research 2025 -->
+    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+      <h3>Reproducible Research 2025</h3>
+      <p>Course repository for reproducible research content and submissions.</p>
+      <p><strong>Tools:</strong> R Markdown</p>
+      <a href="https://github.com/Bhupender-Bhupender/reproducible_research_2025" target="_blank">View on GitHub</a>
     </div>
 
   </div>
 </section>
+
 
 <!-- CERTIFICATIONS -->
 <section id="certifications" style="padding: 3em 2em; background: #e9f5e9;">
@@ -60,10 +123,32 @@ author_profile: true
 <!-- CONTACT -->
 <section id="contact" style="padding: 3em 2em; background: #f5f5f5;">
   <h2>Get in Touch</h2>
-  <p>Email: <a href="mailto:bb.datasage@gmail.com">bb.datasage@gmail.com</a></p>
-  <p>LinkedIn: <a href="https://linkedin.com/in/bhupender-134613345" target="_blank">View Profile</a></p>
-  <p>GitHub: <a href="https://github.com/Bhupender-Bhupender" target="_blank">Bhupender-Bhupender</a></p>
+  <form action="https://formspree.io/f/{your-form-id}" method="POST" style="max-width: 500px; margin: 0 auto;">
+    <label for="name">Name:</label><br>
+    <input type="text" name="name" required style="width: 100%; padding: 10px; margin-bottom: 1em;"><br>
+
+    <label for="email">Email:</label><br>
+    <input type="email" name="email" required style="width: 100%; padding: 10px; margin-bottom: 1em;"><br>
+
+    <label for="message">Message:</label><br>
+    <textarea name="message" rows="5" required style="width: 100%; padding: 10px; margin-bottom: 1em;"></textarea><br>
+
+    <button type="submit" style="background: #007bff; color: white; border: none; padding: 10px 20px; cursor: pointer;">Send</button>
+  </form>
 </section>
+
+<!-- ABOUT ME -->
+<section style="padding: 3em 2em; background: #ffffff;">
+  <h2>About Me</h2>
+  <p>
+    I’m <strong>Bhupender</strong>, a graduate in Data Science and Business Analytics from the University of Warsaw, with a foundation in Computer Science and Engineering.
+    I specialize in applying data-driven techniques to solve real-world business problems using tools like Python, Power BI, and machine learning.
+  </p>
+  <p>
+    I'm based in Warsaw, Poland and currently focusing on advanced data science, automation, and scalable data pipelines.
+  </p>
+</section>
+
 
 <style>
   html {
