--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@ author_profile: true
       <h3>R Shiny + MariaDB App</h3>
       <p>Student management app built with R Shiny + MariaDB for live data interaction, filtering, and dashboarding.</p>
       <p><strong>Tools:</strong> R Shiny, SQL, Dashboard</p>
-      <a href="https://github.com/Bhupender-Bhupender/R-Shiny-MariaDB-Student-App" target="_blank">View on GitHub</a>
-    </div>
+      <a href="https://github.com/Bhupender-Bhupender/R.Shiny-MariaDB-Student-App" target="_blank">View on GitHub</a>
+    </div> 
 
     <!-- Project: Student Management System -->
     <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
