--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ author_profile: true
     <!-- Project: Student Management System -->
     <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
       <h3>Student Management System</h3>
-      <p>Java-based student data system with file I/O, GUI, and CRUD functionality.</p>
-      <p><strong>Tools:</strong> Java, Swing</p>
+      <p>Python-based Student Management System using SQLite. Includes CLI interface for adding, updating, deleting, and viewing student records with database integration.</p>
+      <p><strong>Tools:</strong>Python, Sql Alchemy, Sql Server, Javascript, Html & CSS</p>
       <a href="https://github.com/Bhupender-Bhupender/Student-Management-System" target="_blank">View on GitHub</a>
     </div>
 
@@ -48,7 +48,7 @@ author_profile: true
       <h3>Web Scraping</h3>
       <p>Python-based scripts that scrape GitHub repos, URLs, and article descriptions using requests and BeautifulSoup.</p>
       <p><strong>Tools:</strong> Python, BeautifulSoup</p>
-      <a href="https://github.com/Bhupender-Bhupender/Web-Scraping" target="_blank">View on GitHub</a>
+      <a href="https://github.com/Bhupender-Bhupender/Web-Scrapping" target="_blank">View on GitHub</a>
     </div>
 
     <!-- Project: Social Networks and Spatial ML -->
@@ -89,22 +89,6 @@ author_profile: true
       <p>Predictive modeling and customer behavior analysis for an online shopping portal.</p>
       <p><strong>Tools:</strong> Python, Pandas, Power BI</p>
       <a href="https://github.com/Bhupender-Bhupender/Predictive-Analysis-Ecommerce" target="_blank">View on GitHub</a>
-    </div>
-
-    <!-- Project: Reproducible Research Assignments -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
-      <h3>Reproducible Research Assignments</h3>
-      <p>Course assignments involving markdown documentation and R visual reports.</p>
-      <p><strong>Tools:</strong> R Markdown, ggplot2</p>
-      <a href="https://github.com/Bhupender-Bhupender/Reproducible-Research-Assignments" target="_blank">View on GitHub</a>
-    </div>
-
-    <!-- Project: Reproducible Research 2025 -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
-      <h3>Reproducible Research 2025</h3>
-      <p>Course repository for reproducible research content and submissions.</p>
-      <p><strong>Tools:</strong> R Markdown</p>
-      <a href="https://github.com/Bhupender-Bhupender/reproducible_research_2025" target="_blank">View on GitHub</a>
     </div>
 
   </div>
