--- a/index.html
+++ b/index.html
@@ -121,17 +121,24 @@ author_profile: true
   </form>
 </section>
 
-<!-- ABOUT ME -->
-<section style="padding: 3em 2em; background: #ffffff;">
+<section id="about" style="padding: 3em 2em; background: #f3f4f6;">
   <h2>About Me</h2>
-  <p>
-    I’m <strong>Bhupender</strong>, a graduate in Data Science and Business Analytics from the University of Warsaw, with a foundation in Computer Science and Engineering.
-    I specialize in applying data-driven techniques to solve real-world business problems using tools like Python, Power BI, and machine learning.
-  </p>
-  <p>
-    I'm based in Warsaw, Poland and currently focusing on advanced data science, automation, and scalable data pipelines.
-  </p>
+  <div style="max-width: 800px; margin: auto; font-size: 1.05em; line-height: 1.7;">
+    <p>
+      I'm <strong>Bhupender</strong>, a Data Science and Business Analytics graduate from the <strong>University of Warsaw</strong>, with a Bachelor's in Computer Science and Engineering.
+    </p>
+    <p>
+      My work focuses on applying machine learning, data engineering, and statistical analysis to uncover insights that drive business decisions. I love building data workflows, visual dashboards, and automating insights.
+    </p>
+    <p>
+      I’ve worked on projects ranging from e-commerce predictions and healthcare classification to startup network mapping and ESG data analysis.
+    </p>
+    <p>
+      Currently based in <strong>Warsaw, Poland</strong>, I’m looking for roles where I can contribute data-driven thinking and scalable analytics to real-world challenges.
+    </p>
+  </div>
 </section>
+
 
 
 <style>
