--- a/index.html
+++ b/index.html
@@ -6,13 +6,29 @@ author_profile: true
 ---
 
 <!-- HERO SECTION -->
-<section style="background: linear-gradient(to right, #f8f9fa, #e8f0fe); padding: 3em 1.5em; text-align: center; border-radius: 8px;">
-  <h2 style="font-size: 2em; margin-bottom: 0.5em;">Turning Data into Decisions</h2>
-  <p style="font-size: 1.1em; color: #555; max-width: 700px; margin: 0 auto;">
-    Leveraging data science, business analytics, and machine learning to create real-world impact.  
-    Welcome to my personal portfolio — showcasing work across predictive analytics, automation, and smart data solutions.
-  </p>
+<section id="hero" style="padding: 4em 2em; background: linear-gradient(to right, #e0ecff, #f3f4f6);">
+  <div style="max-width: 1100px; margin: auto; display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 30px;">
+
+    <!-- LEFT COLUMN: Text -->
+    <div style="flex: 1 1 55%; min-width: 280px;">
+      <h1 style="font-size: 2.5em; margin-bottom: 0.3em;">Hi, I'm Bhupender</h1>
+      <p style="font-size: 1.15em; line-height: 1.7;">
+        I help businesses turn complex data into clear, actionable insights through advanced analytics, automation, and scalable machine learning workflows.
+      </p>
+      <div style="margin-top: 2em;">
+        <a href="#projects" style="background: #007bff; color: white; padding: 12px 20px; border-radius: 5px; text-decoration: none; margin-right: 15px;">View Projects</a>
+        <a href="#contact" style="border: 2px solid #007bff; color: #007bff; padding: 12px 20px; border-radius: 5px; text-decoration: none;">Get in Touch</a>
+      </div>
+    </div>
+
+    <!-- RIGHT COLUMN: Image -->
+    <div style="flex: 1 1 40%; min-width: 250px; display: flex; justify-content: center;">
+      <img src="/assets/images/data-hero.svg" alt="Data Illustration" style="max-width: 100%; border-radius: 12px;">
+    </div>
+
+  </div>
 </section>
+
 
 <!-- PROJECTS -->
 <section id="projects" style="padding: 3em 2em; background: #fdf7f0;">
