--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ author_profile: true
 
     <!-- RIGHT COLUMN: Image -->
     <div style="flex: 1 1 40%; min-width: 250px; display: flex; justify-content: center;">
-      <img src="/assets/images/data-hero.svg" alt="Data Illustration" style="max-width: 100%; border-radius: 12px;">
+      <img src="/assets/images/Home.gif" alt="Data Illustration" style="max-width: 100%; border-radius: 12px;">
     </div>
 
   </div>
@@ -120,42 +120,28 @@ author_profile: true
   </ul>
 </section>
 
-<!-- CONTACT -->
-<section id="contact" style="padding: 3em 2em; background: #f5f5f5;">
-  <h2>Get in Touch</h2>
-  <form action="https://formspree.io/f/mjkrdkww" method="POST" style="max-width: 500px; margin: 0 auto;">
-    <label for="name">Name:</label><br>
-    <input type="text" name="name" required style="width: 100%; padding: 10px; margin-bottom: 1em;"><br>
-
-    <label for="email">Email:</label><br>
-    <input type="email" name="email" required style="width: 100%; padding: 10px; margin-bottom: 1em;"><br>
-
-    <label for="message">Message:</label><br>
-    <textarea name="message" rows="5" required style="width: 100%; padding: 10px; margin-bottom: 1em;"></textarea><br>
-
-    <button type="submit" style="background: #007bff; color: white; border: none; padding: 10px 20px; cursor: pointer;">Send</button>
-  </form>
-</section>
-
-<section id="about" style="padding: 3em 2em; background: #f3f4f6;">
-  <h2>About Me</h2>
-  <div style="max-width: 800px; margin: auto; font-size: 1.05em; line-height: 1.7;">
-    <p>
-      I'm <strong>Bhupender</strong>, a Data Science and Business Analytics graduate from the <strong>University of Warsaw</strong>, with a Bachelor's in Computer Science and Engineering.
-    </p>
-    <p>
-      My work focuses on applying machine learning, data engineering, and statistical analysis to uncover insights that drive business decisions. I love building data workflows, visual dashboards, and automating insights.
-    </p>
-    <p>
-      I’ve worked on projects ranging from e-commerce predictions and healthcare classification to startup network mapping and ESG data analysis.
-    </p>
-    <p>
-      Currently based in <strong>Warsaw, Poland</strong>, I’m looking for roles where I can contribute data-driven thinking and scalable analytics to real-world challenges.
-    </p>
+<section id="contact" style="padding: 3em 2em; background: #f8f9fa;">
+  <h2 style="text-align: center;">Get in Touch</h2>
+  <div style="max-width: 600px; margin: auto;">
+    <form action="https://formspree.io/f/mjkrdkww" method="POST" style="display: flex; flex-direction: column; gap: 1em;">
+      <input type="text" name="name" placeholder="Name" required style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+      <input type="email" name="email" placeholder="Email" required style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;">
+      <textarea name="message" placeholder="Message" rows="5" required style="padding: 10px; border: 1px solid #ccc; border-radius: 5px;"></textarea>
+      <button type="submit" style="background: #007bff; color: white; border: none; padding: 12px; border-radius: 5px; cursor: pointer;">Send</button>
+    </form>
   </div>
 </section>
 
 
+<section id="about" style="padding: 4em 2em; background: #f3f4f6;">
+  <h2 style="text-align: center;">About Me</h2>
+  <div style="max-width: 800px; margin: auto; font-size: 1.05em; line-height: 1.7;">
+    <p>I'm <strong>Bhupender Sumbharwal</strong>, a Data Science and Business Analytics graduate from the <strong>University of Warsaw</strong>, with a Bachelor's in Computer Science and Engineering.</p>
+    <p>My work focuses on applying machine learning, data engineering, and statistical analysis to uncover insights that drive business decisions. I love building data workflows, visual dashboards, and automating insights.</p>
+    <p>I’ve worked on projects ranging from e-commerce predictions and healthcare classification to startup network mapping and ESG data analysis.</p>
+    <p>Currently based in <strong>Warsaw, Poland</strong>, I’m looking for roles where I can contribute data-driven thinking and scalable analytics to real-world challenges.</p>
+  </div>
+</section>
 
 <style>
   html {
