--- a/index.html
+++ b/index.html
@@ -4,10 +4,21 @@ permalink: /
 classes: wide
 author_profile: true
 ---
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- HERO SECTION -->
-<section id="hero" style="padding: 4em 2em; background: linear-gradient(to right, #e0ecff, #f3f4f6);">
-  <div style="max-width: 1100px; margin: auto; display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 30px;">
+<section id="hero" style="padding: 4em 2em; background: linear-gradient(to right, #e0ecff, #f3f4f6); box-shadow: 0 2px 15px rgba(0,0,0,0.05);">
+  <div style="
+  max-width: 1100px;
+  width: 100%;
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-between;
+  gap: 30px;
+  padding: 0 1em;">
+
 
     <!-- LEFT COLUMN: Text -->
     <div style="flex: 1 1 55%; min-width: 280px;">
@@ -23,7 +34,7 @@ author_profile: true
 
     <!-- RIGHT COLUMN: Image -->
     <div style="flex: 1 1 40%; min-width: 250px; display: flex; justify-content: center;">
-      <img src="/assets/images/Home.gif" alt="Data Illustration" style="max-width: 100%; border-radius: 12px;">
+      <img src="/images/Home.gif" alt="Data Illustration" style="max-width: 100%; border-radius: 12px;">
     </div>
 
   </div>
@@ -148,4 +159,17 @@ author_profile: true
     scroll-behavior: smooth;
   }
 </style>
+
+<style>
+  a:hover {
+    opacity: 0.85;
+    transition: all 0.2s ease-in-out;
+  }
+
+  section h2 {
+    margin-bottom: 1em;
+    font-size: 2em;
+  }
+</style>
+
 
