--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ author_profile: true
 
     <!-- RIGHT COLUMN: Image -->
     <div style="flex: 1 1 40%; min-width: 250px; display: flex; justify-content: center;">
-      <img src="/images/Home.gif" alt="Data Illustration" style="max-width: 100%; border-radius: 12px;">
+      <img src="{{ '/assets/images/Home.gif' | relative_url }}" alt="Visual" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border: 1px solid #ccc;">
     </div>
 
   </div>
