--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 ---
 layout: single
 permalink: /
-classes: wide
 author_profile: true
 ---
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,14 +21,10 @@ author_profile: true
 
     <!-- LEFT COLUMN: Text -->
     <div style="flex: 1 1 55%; min-width: 280px;">
-      <h1 style="font-size: 2.5em; margin-bottom: 0.3em;">Hi, I'm Bhupender</h1>
+      <h1 style="font-size: 2.5em; margin-bottom: 0.3em;">Hi</h1>
       <p style="font-size: 1.15em; line-height: 1.7;">
-        I help businesses turn complex data into clear, actionable insights through advanced analytics, automation, and scalable machine learning workflows.
+        I’m passionate about turning complex data into clear, actionable insights using advanced analytics, automation, and scalable machine learning workflows—and I’m now looking for new opportunities to apply these skills in a dynamic team.
       </p>
-      <div style="margin-top: 2em;">
-        <a href="#projects" style="background: #007bff; color: white; padding: 12px 20px; border-radius: 5px; text-decoration: none; margin-right: 15px;">View Projects</a>
-        <a href="#contact" style="border: 2px solid #007bff; color: #007bff; padding: 12px 20px; border-radius: 5px; text-decoration: none;">Get in Touch</a>
-      </div>
     </div>
 
     <!-- RIGHT COLUMN: Image -->
