--- a/index.html
+++ b/index.html
@@ -7,16 +7,8 @@ author_profile: true
 
 <!-- HERO SECTION -->
 <section id="hero" style="padding: 4em 2em; background: linear-gradient(to right, #e0ecff, #f3f4f6); box-shadow: 0 2px 15px rgba(0,0,0,0.05);">
-  <div style="
-  max-width: 1100px;
-  width: 100%;
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  justify-content: space-between;
-  gap: 30px;
-  padding: 0 1em;">
+  <div style="max-width: 850px; margin: auto; display: flex; ...">
+
 
 
     <!-- LEFT COLUMN: Text -->
