--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: single
 permalink: /
+classes: wide
 author_profile: true
 ---
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
