--- a/index.html
+++ b/index.html
@@ -13,15 +13,15 @@ author_profile: true
 
 
     <!-- LEFT COLUMN: Text -->
-    <div style="flex: 1 1 55%; min-width: 280px;">
+    <div style="flex: 1 1 55%; min-width: 240px;">
       <h1 style="font-size: 2.5em; margin-bottom: 0.3em;">Hi</h1>
       <p style="font-size: 1.15em; line-height: 1.7;">
-        I’m passionate about turning complex data into clear, actionable insights using advanced analytics, automation, and scalable machine learning workflows—and I’m now looking for new opportunities to apply these skills in a dynamic team.
+        I’m passionate about turning complex data into clear, actionable insights using advanced analytics, automation, and scalable machine learning workflows and I’m now looking for new opportunities to apply these skills in a dynamic team.
       </p>
     </div>
 
     <!-- RIGHT COLUMN: Image -->
-    <div style="flex: 1 1 40%; min-width: 250px; display: flex; justify-content: center;">
+    <div style="flex: 1 1 40%; min-width: 220px; display: flex; justify-content: center;">
       <img src="{{ '/assets/images/Home.gif' | relative_url }}" alt="Visual" style="max-width: 100%; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); border: 1px solid #ccc;">
     </div>
 
