--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ classes: wide
 author_profile: true
 ---
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<div style="max-width: 900px; margin: auto;">
 <!-- HERO SECTION -->
 <section id="hero" style="padding: 4em 2em; background: linear-gradient(to right, #e0ecff, #f3f4f6); box-shadow: 0 2px 15px rgba(0,0,0,0.05);">
   <div style="max-width: 850px; margin: auto; display: flex; ...">
@@ -135,12 +135,14 @@ author_profile: true
 <section id="about" style="padding: 4em 2em; background: #f3f4f6;">
   <h2 style="text-align: center;">About Me</h2>
   <div style="max-width: 800px; margin: auto; font-size: 1.05em; line-height: 1.7;">
-    <p>I'm <strong>Bhupender Sumbharwal</strong>, a Data Science and Business Analytics graduate from the <strong>University of Warsaw</strong>, with a Bachelor's in Computer Science and Engineering.</p>
+    <p>I'm <strong>Bhupender</strong>, a Data Science and Business Analytics graduate from the <strong>University of Warsaw</strong>, with a Bachelor's in Computer Science and Engineering.</p>
     <p>My work focuses on applying machine learning, data engineering, and statistical analysis to uncover insights that drive business decisions. I love building data workflows, visual dashboards, and automating insights.</p>
     <p>I’ve worked on projects ranging from e-commerce predictions and healthcare classification to startup network mapping and ESG data analysis.</p>
     <p>Currently based in <strong>Warsaw, Poland</strong>, I’m looking for roles where I can contribute data-driven thinking and scalable analytics to real-world challenges.</p>
   </div>
 </section>
+
+</div>
 
 <style>
   html {
