--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@ author_profile: true
 <div style="max-width: 900px; margin: auto;">
 <!-- HERO SECTION -->
 <section id="hero" style="padding: 4em 2em; background: linear-gradient(to right, #e0ecff, #f3f4f6); box-shadow: 0 2px 15px rgba(0,0,0,0.05);">
-  <div style="max-width: 850px; margin: auto; display: flex; ...">
-
-
+  <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 30px; padding: 0 1em;">
 
     <!-- LEFT COLUMN: Text -->
     <div style="flex: 1 1 55%; min-width: 240px;">
@@ -148,9 +146,7 @@ author_profile: true
   html {
     scroll-behavior: smooth;
   }
-</style>
 
-<style>
   a:hover {
     opacity: 0.85;
     transition: all 0.2s ease-in-out;
@@ -160,6 +156,13 @@ author_profile: true
     margin-bottom: 1em;
     font-size: 2em;
   }
+
+  /* ✅ NEW: Restrict section width */
+  section {
+    max-width: 900px;
+    margin: auto;
+  }
 </style>
+
 
 
