--- a/index.html
+++ b/index.html
@@ -142,6 +142,10 @@ author_profile: true
 
 </div>
 
+<!-- BACK TO TOP BUTTON -->
+<button onclick="topFunction()" id="backToTop" title="Go to top">↑</button>
+
+<!-- SCRIPTS AND STYLES -->
 <style>
   html {
     scroll-behavior: smooth;
@@ -157,12 +161,82 @@ author_profile: true
     font-size: 2em;
   }
 
-  /* ✅ NEW: Restrict section width */
-  section {
-    max-width: 900px;
-    margin: auto;
+  @media screen and (max-width: 768px) {
+    #hero {
+      flex-direction: column;
+      text-align: center;
+    }
+    #hero div {
+      flex: 1 1 100% !important;
+    }
+    section {
+      padding: 2em 1em;
+    }
+  }
+
+  #backToTop {
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    background-color: #007bff;
+    color: white;
+    border: none;
+    padding: 12px 16px;
+    border-radius: 50%;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+  }
+
+  #backToTop:hover {
+    background-color: #0056b3;
+  }
+
+  .hidden {
+    opacity: 0;
+    transform: translateY(30px);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+  }
+
+  .fade-up {
+    opacity: 1;
+    transform: translateY(0);
   }
 </style>
+
+<script>
+  // Back to Top functionality
+  window.onscroll = function () {
+    document.getElementById("backToTop").style.display =
+      document.body.scrollTop > 100 || document.documentElement.scrollTop > 100
+        ? "block"
+        : "none";
+  };
+
+  function topFunction() {
+    window.scrollTo({ top: 0, behavior: "smooth" });
+  }
+
+  // Reveal sections on scroll
+  document.addEventListener("DOMContentLoaded", () => {
+    const sections = document.querySelectorAll("section");
+    const options = { threshold: 0.1 };
+    const observer = new IntersectionObserver((entries) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add("fade-up");
+        }
+      });
+    }, options);
+    sections.forEach((section) => {
+      section.classList.add("hidden");
+      observer.observe(section);
+    });
+  });
+</script>
+</div>
 
 
 
