--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@ permalink: /
 classes: wide
 author_profile: true
 ---
+
+{% raw %}
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div style="max-width: 900px; margin: auto;">
 <!-- HERO SECTION -->
@@ -238,5 +240,5 @@ author_profile: true
 </script>
 </div>
 
-
+{% endraw %}
 
