--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@ author_profile: true
 <!-- HERO SECTION -->
 <section id="hero" style="padding: 4em 2em; background: linear-gradient(to right, #e0ecff, #f3f4f6); box-shadow: 0 2px 15px rgba(0,0,0,0.05);">
   <div style="display: flex; flex-wrap: wrap; align-items: center; justify-content: space-between; gap: 30px; padding: 0 1em;">
-
     <!-- LEFT COLUMN: Text -->
     <div style="flex: 1 1 55%; min-width: 240px;">
       <h1 style="font-size: 2.5em; margin-bottom: 0.3em;">Hi</h1>
@@ -142,74 +141,26 @@ author_profile: true
 
 </div>
 
-<!-- BACK TO TOP BUTTON -->
-<button onclick="topFunction()" id="backToTop" title="Go to top">↑</button>
-
-<!-- STYLES -->
 <style>
-  html { scroll-behavior: smooth; }
-  a:hover { opacity: 0.85; transition: all 0.2s ease-in-out; }
-  section h2 { margin-bottom: 1em; font-size: 2em; }
-  @media screen and (max-width: 768px) {
-    #hero { flex-direction: column; text-align: center; }
-    #hero div { flex: 1 1 100% !important; }
-    section { padding: 2em 1em; }
+  html {
+    scroll-behavior: smooth;
   }
-  #backToTop {
-    display: none;
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    z-index: 99;
-    font-size: 18px;
-    background-color: #007bff;
-    color: white;
-    border: none;
-    padding: 12px 16px;
-    border-radius: 50%;
-    cursor: pointer;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+
+  a:hover {
+    opacity: 0.85;
+    transition: all 0.2s ease-in-out;
   }
-  #backToTop:hover {
-    background-color: #0056b3;
+
+  section h2 {
+    margin-bottom: 1em;
+    font-size: 2em;
   }
-  .hidden {
-    opacity: 0;
-    transform: translateY(30px);
-    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
-  }
-  .fade-up {
-    opacity: 1;
-    transform: translateY(0);
+
+  /* ✅ NEW: Restrict section width */
+  section {
+    max-width: 900px;
+    margin: auto;
   }
 </style>
 
-<!-- SCRIPT -->
-<script>
-  window.onscroll = function () {
-    document.getElementById("backToTop").style.display =
-      document.body.scrollTop > 100 || document.documentElement.scrollTop > 100
-        ? "block" : "none";
-  };
-  function topFunction() {
-    window.scrollTo({ top: 0, behavior: "smooth" });
-  }
-  document.addEventListener("DOMContentLoaded", () => {
-    const sections = document.querySelectorAll("section");
-    const observer = new IntersectionObserver((entries) => {
-      entries.forEach((entry) => {
-        if (entry.isIntersecting) {
-          entry.target.classList.add("fade-up");
-        }
-      });
-    }, { threshold: 0.1 });
-    sections.forEach((section) => {
-      section.classList.add("hidden");
-      observer.observe(section);
-    });
-  });
-</script>
-
-</body>
-</html>
 
