--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ permalink: /
 classes: wide
 author_profile: true
 ---
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div style="max-width: 900px; margin: auto;">
 <!-- HERO SECTION -->
 <section id="hero" style="padding: 4em 2em; background: linear-gradient(to right, #e0ecff, #f3f4f6); box-shadow: 0 2px 15px rgba(0,0,0,0.05);">
