--- a/index.html
+++ b/index.html
@@ -139,6 +139,51 @@ author_profile: true
   </div>
 </section>
 
+  <!-- BACK TO TOP BUTTON -->
+<button onclick="scrollToTop()" id="backToTopBtn" title="Go to top">↑</button>
+
+<style>
+  #backToTopBtn {
+    display: none;
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #007bff;
+    color: white;
+    cursor: pointer;
+    padding: 12px 16px;
+    border-radius: 50%;
+    box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+    transition: opacity 0.3s ease-in-out;
+  }
+
+  #backToTopBtn:hover {
+    background-color: #0056b3;
+  }
+</style>
+
+<script>
+  // Show/hide button when scrolling
+  window.onscroll = function() {
+    const btn = document.getElementById("backToTopBtn");
+    if (document.body.scrollTop > 300 || document.documentElement.scrollTop > 300) {
+      btn.style.display = "block";
+    } else {
+      btn.style.display = "none";
+    }
+  };
+
+  // Scroll to top smoothly
+  function scrollToTop() {
+    window.scrollTo({ top: 0, behavior: 'smooth' });
+  }
+</script>
+
+
 </div>
 
 <style>
