--- a/index.html
+++ b/index.html
@@ -31,8 +31,17 @@ author_profile: true
   <h2>Featured Projects</h2>
   <div style="display: flex; flex-wrap: wrap; gap: 30px; margin-top: 20px;">
 
+
+    <!-- Project: Big Data Insights -->
+<div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
+  <h3>Big Data Insights</h3>
+  <p>Explored IT skill trends in education using big data techniques. Conducted EDA, data visualization, and insights extraction.</p>
+  <p><strong>Tools:</strong> Python, Big Data, Azure, Databricks</p>
+  <a href="https://github.com/Bhupender-Bhupender/BigData-Big-Data-Driven-Insights-Trends-in-IT-Skills-for-Education" target="_blank">View on GitHub</a>
+</div>
+
     <!-- Project: Unsupervised-ML -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
       <h3>Unsupervised ML</h3>
       <p>A collection of unsupervised ML projects in Python including clustering, PCA, and topic modeling.</p>
       <p><strong>Tools:</strong> Python, Scikit-learn, NLP</p>
@@ -40,7 +49,7 @@ author_profile: true
     </div>
 
     <!-- Project: R Shiny MariaDB Student App -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
       <h3>R Shiny + MariaDB App</h3>
       <p>Student management app built with R Shiny + MariaDB for live data interaction, filtering, and dashboarding.</p>
       <p><strong>Tools:</strong> R Shiny, SQL, Dashboard</p>
@@ -48,7 +57,7 @@ author_profile: true
     </div> 
 
     <!-- Project: Student Management System -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
       <h3>Student Management System</h3>
       <p>Python-based Student Management System using SQLite. Includes CLI interface for adding, updating, deleting, and viewing student records with database integration.</p>
       <p><strong>Tools:</strong>Python, Sql Alchemy, Sql Server, Javascript, Html & CSS</p>
@@ -56,7 +65,7 @@ author_profile: true
     </div>
 
     <!-- Project: Web Scraping -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
       <h3>Web Scraping</h3>
       <p>Python-based scripts that scrape GitHub repos, URLs, and article descriptions using requests and BeautifulSoup.</p>
       <p><strong>Tools:</strong> Python, BeautifulSoup</p>
@@ -64,7 +73,7 @@ author_profile: true
     </div>
 
     <!-- Project: Social Networks and Spatial ML -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
       <h3>Social Networks & Spatial ML</h3>
       <p>Mapped shared investor networks across tech hubs using Crunchbase and spatial ML.</p>
       <p><strong>Tools:</strong> Python, GeoPandas, NetworkX</p>
@@ -72,7 +81,7 @@ author_profile: true
     </div>
 
     <!-- Project: Vampire Diaries Report -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
       <h3>Vampire Diaries Report</h3>
       <p>Data analysis of the Vampire Diaries TV series — ownership trends, fan activity, and popularity mapping.</p>
       <p><strong>Tools:</strong> Python, NLP, Visualization</p>
@@ -80,7 +89,7 @@ author_profile: true
     </div>
 
     <!-- Project: Stroke Risk Classification -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
       <h3>Stroke Risk Classification</h3>
       <p>Classification using models like logistic regression and XGBoost to predict risk.</p>
       <p><strong>Tools:</strong> Python, Sklearn, XGBoost</p>
@@ -88,7 +97,7 @@ author_profile: true
     </div>
 
     <!-- Project: Seoul Bike Regression -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
       <h3>Seoul Bike Regression</h3>
       <p>Regression model built to forecast bike rentals using weather and temporal data.</p>
       <p><strong>Tools:</strong> Python, Linear & Ridge Regression</p>
@@ -96,7 +105,7 @@ author_profile: true
     </div>
 
     <!-- Project: E-Commerce Predictive Analysis -->
-    <div style="flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 20px;">
+    <div style="flex: 1 1 200px; background: #fff; border-radius: 10px; box-shadow: 0 4px 10px rgba(0,0,0,0.1); padding: 16px;">
       <h3>E-Commerce Predictive Analysis</h3>
       <p>Predictive modeling and customer behavior analysis for an online shopping portal.</p>
       <p><strong>Tools:</strong> Python, Pandas, Power BI</p>
