--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@ author_profile: true
   <h2>Certifications</h2>
   <ul>
     <li><strong>Python Libraries for Data Analysis</strong> – Scaler by InterviewBit</li>
+    <li><strong>Create Machine Learning Models in Microsoft Azure</strong> – Microsoft</li>
+    <li><strong>Microsoft Azure Machine Learning for Data Scientists</strong> – Microsoft</li>
     <li><strong>Anti-Money Laundering (AML)</strong> – University of Warsaw</li>
   </ul>
 </section>
